# foreign

./: COPYING  COPYRIGHTS  ChangeLog  DESCRIPTION  INDEX  K_Van_Dijck_patch  K_Van_Dijck_patch-2  MD5  NAMESPACE  TITLE  cleanup  configure  configure.ac  configure.in  configure.win
R/: R_systat.R  Sread.R  arff.R  dbf.R  minitab.R  octave.R  read.dta.R  read.epiinfo.R  read.ssd.R  spss.R  writeForeignCode.R  writeForeignSAS.R  xport.R  zzz.R
inst/: LICENCE
inst/po/de/LC_MESSAGES/: foreign.mo
inst/po/en@quot/LC_MESSAGES/: R-foreign.mo  foreign.mo
inst/po/fr/LC_MESSAGES/: foreign.mo
inst/po/pl/LC_MESSAGES/: foreign.mo
man/: lookup.xport.Rd  read.S.Rd  read.arff.Rd  read.dbf.Rd  read.dta.Rd  read.epiinfo.Rd  read.mtp.Rd  read.octave.Rd  read.spss.Rd  read.ssd.Rd  read.systat.Rd  read.xport.Rd  write.arff.Rd  write.dbf.Rd  write.dta.Rd  write.foreign.Rd
po/: R-de.po  R-en@quot.po  R-foreign.pot  R-fr.po  R-it.po  R-pl.po  de.po  en@quot.po  foreign.pot  fr.po  it.po  pl.po
src/: ChangeLog  R_systat.c  Rdbfread.c  Rdbfwrite.c  SASxport.c  SASxport.h  SASxport.h.in  avl.c  avl.h  dbfopen.c  double.c  file-handle.c  file-handle.h  foreign.h  format.c  format.def  format.h  init.c  minitab.c  pfm-read.c  pfm.h  pspp-format-def.h  sfm-read.c  sfm-read.c.orig  sfm-read.c.rej  sfm.h  sfmP.h  sfmchanges  shapefil.h  spss.c  stataread.c  swap_bytes.h  swap_bytes.h.in  var.h.in  var.h.in.orig  var.h.in.rej  xxx.patch
tests/: S3.R  S3.Rout.save  dumpdata  minitab.R  minitab.Rout.save  missinglabels.dta  octave.Rout.save  sas.R  spss.R  spss.Rout.save  stata.R  stata.Rout.save  xport.R  xport.Rout.save
tests/keep/: codefile.sps
